<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bluetooth</string>
    <string name="DL_PairedAndConnected">Paired and %s connected</string>
    <string name="DL_PairWithThisDevice">Pair with this device</string>
    <string name="DL_PairedButNotConnected">Paired and is not connected </string>
    <string name="DL_PairedAndConnecting">Paired and is connecting...</string>
    <string name="DL_Connecting">%s connecting...</string>
    <string name="DL_Pairing">Pairing...</string>
    <string name="DL_Pair">Pair</string>
    <string name="DL_Connect">Connect</string>
    <string name="DL_UnPair">UnPair</string>
    <string name="DL_UnConnect">UnConnect</string>
    <string name="setting_Discoverable">Discoverable</string>
    <string name="phonebook_clean">Cleaning Phone Book...</string>
    <string name="calllog_clean">Cleaning Call Log...</string>
    <string name="phonebook_state">PBAP State:</string>
    <string name="phonebook_Device">Device:</string>
    <string name="phonebook_loading">Loading Phone Book</string>
    <string name="calllog_loading">Loading Call Log</string>
    <string name="phonebook_dlcontacts">Donwloading Phone Book</string>
    <string name="phonebook_dlcalllog">Donwloading Call Log</string>
    <string name="phonebook_Search">Search</string>
    <string name="main_DeviceList">Device List</string>
    <string name="main_Phone">Phone</string>
    <string name="main_Phonebook">Phone Book</string>
    <string name="main_MusicAvrcp">Music</string>
    <string name="main_bluetooth_enabled">Bluetooth On</string>
    <string name="main_bluetooth_disabled">Bluetooth Off</string>
    <string name="main_setting">Setting ...</string>
    <string name="main_callrecord">Call Log</string>
    <string name="setting_devicename">Device Name</string>
    <string name="setting_pincode">PIN Code</string>
    <string name="setting_pincode_txt">1234</string>
    <string name="setting_ok">Save</string>
    <string name="setting_cancel">Cancel</string>
    <string name="btn_profilelist_close">Close</string>
    <string name="ok">OK</string>    
    <string name="devicelist_pbapmode_anonymous">Anonymous Connect</string>
    <string name="devicelist_pbapmode_auth">Authentication Connect</string>
    <string name="enter_phone_num">Please enter a phone number</string>
    <string name="please_conn_device">Please connect the Bluetooth device</string>
    <string name="Had_conn_device">Have conntected Bluetooth device:</string>
    <string name="search_contacts">search contacts</string>
    <string name="pb_name_unknown">Unknown</string>
    <string name="unconnect_notice">No Matching Contacts</string>
    <string name="ready_delete_phonebook">Sure to delete the Phone Book?</string>
    <string name="ready_delete_calllog">Sure to delete the Call Log?</string>
    <string name="call_log_dial_in">dial-in</string>
    <string name="call_log_missed">missed</string>
    <string name="call_log_dial_out">dial-out</string>
    <string name="avrcp_unconnected">AVRCP is unconnected,Can not play Music</string>
    <string name="a2dp_unconnected">A2DP is unconnected,Can not play Music</string>
    <string name="avrcp_a2dp_unconnected">Audio are unconnected,Can not play Music</string>
    <string name="DL_Searching_device">Searching...</string>
    <string name="avrcp_playing">Music Playing</string>
    <string name="avrcp_noplaying">Music is not playing</string>
    <string name="first_connecting">The first automatic connection need a little time, please waiting...</string>
    <string name="please_disconnect_device">Please disconnect has Bonded device</string>
    <string name="connecting_HFP"> ,connecting HFP...</string>
    <string name="connecting_A2DP"> ,connecting A2DP...</string>
    <string name="connecting_AVRCP"> ,connecting AVRCP...</string>
    <string name="ready_download_phonebook">Whether to re download Phone Book?</string>
    <string name="ready_download_calllog">Whether to re download Call Log?</string>
    <string name="PBAP_Disconnected">PBAP未连接,需先断开再连接</string>
    
    <!-- Summary for Bluetooth phone book access device list-->
    <string name="bluetooth_available_pbapc_device">Available phone book access devices</string>
    <string name="bluetooth_pbapc_device_operation">Pbapc device operation</string>
    <string name="bluetooth_pbapc_device_search_result">Pbapc search result</string>
    <string name="bluetooth_pbapc_device_current_device">PBAP Device:</string>
    <string name="bluetooth_pbapc_device_status">Status:</string>
    <string name="bluetooth_pbapc_device_authentication">Pbapc Authentication</string>
    <string name="bluetooth_pbapc_device_username">User Name:</string>
    <string name="bluetooth_pbapc_device_password">Password:</string>
    <string name="bluetooth_pbapc_device_anonymous_connect">Anonymous Connect</string>
    <string name="bluetooth_pbapc_device_dowload">Download</string>
    <string name="bluetooth_pbapc_device_dowload_folder">Select download folder</string>
    <string name="bluetooth_pbapc_device_no_dowload_folder">No download folder specified, please select at least one download folder.</string>
    <string name="bluetooth_pbapc_device_clear_before_download">Clear phonebook before download</string>
    <string name="bluetooth_pbapc_device_view_contacts">View contacts</string>
    
    <string name="bluetooth_pbapc_device_clear_contacts">Clear contacts</string>
    <string name="bluetooth_pbapc_device_clear_calls">Clear Calls</string>
    
    <string name="bluetooth_pbapc_device_search">Search</string>
    <string name="bluetooth_pbapc_device_search_folder">Select search folder</string>
    <string name="bluetooth_pbapc_device_no_search_folder">No search folder specified, please select at least one search folder.</string>
    <string name="bluetooth_pbapc_device_search_attribute">Search attribute: </string>
    <string name="bluetooth_pbapc_device_result_order">Result order: </string>
    <string name="bluetooth_pbapc_device_search_key">Keyword: </string>
    <string name="bluetooth_pbapc_device_view_latest_result">View latest result</string>
    <string name="bluetooth_pbapc_device_setting">Setting</string>
    <string name="bluetooth_pbapc_device_clear_before_disconnect">Clear phonebook before disconnect</string>
    <string name="bluetooth_pbapc_device_result_filter">Set result filter</string>
    <string name="bluetooth_pbapc_device_vcard_format">Vcard format version: </string>
    <string name="bluetooth_pbapc_abort_operation">Abort current operation</string>
    <string name="bluetooth_pbapc_send_abort_request">Pbapc abort operation request has sended.</string>
    <string name="bluetooth_pbapc_connect_cancel">Connection has been cancelled.</string>
    <!-- Title for Bluetooth Phonebook Client-->
    <string name="bluetooth_pbapc_unknownstate">Unknown state</string>  
    <string name="bluetooth_pbapc_disconnected">Disconnected</string>
    <string name="bluetooth_pbapc_connecting">Connecting...</string>
    <string name="bluetooth_pbapc_connected">Connected</string>
    <string name="bluetooth_pbapc_disconnecting">Disconnecting...</string>
    <string name="bluetooth_pbapc_communicating">Communicating...</string>
    <string name="setting_pbap_anonymous">PBAP Anonymous Connect</string>
    <string name="setting_pbap_support_gsm">PBAP Support GSM</string>
    <string name="setting_btn_dut_mode">Dut Mode</string>
    <string name="bluetooth_pbap_use_opp">Please use OPP to download phonebook from</string>
    <string name="btn_profilelist_connectall">Connect All</string>
    <string name="str_no_pbap">Your phone is not connected "PBAP" function!</string>
</resources>